<resources>
    <string name="app_name">Cyberspace Info</string>
    <string name="imagem_do_dia">IMAGEM DO DIA</string>
    <string name="imagens_e_videos">IMAGENS E VÍDEOS</string>
    <string name="perfil">PERFIL</string>
    <string name="mars_rover">MARS ROVER</string>
    <string name="eventos_naturais">EVENTOS NATURAIS</string>
    <string name="objetos_em_rota_de_colisao">OBJETOS EM ROTA DE COLISÃO</string>
    <string name="planetas_orbitando_estrelas">PLANETAS ORBITANDO ESTRELAS</string>
    <string name="novas_tecnologias">NOVAS TECNOLOGIAS</string>
    <string name="tempo_em_marte">TEMPO EM MARTE</string>
    <string name="eventos_naturais_titulo">Eventos Naturais</string>
    <string name="atuais">Atuais</string>
    <string name="anteriores">Anteriores</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="sign_up">Sign UP</string>
    <string name="or">OR</string>
    <string name="login">login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tecnologias_usadas">Tecnologias Usadas</string>
    <string name="imagens_favoritas">Imagens Favoritas</string>
    <string name="tecnologias_usadas_menu">TECNOLOGIAS USADAS</string>
    <string name="galeria">GALERIA</string>
    <string name="menu_comparacao">Menu</string>
    <string name="galeria_comparacao">Galeria</string>
    <string name="perfil_comparacao">Perfil</string>
    <string name="marsrover_comparacao">MarsRover</string>
    <string name="asteroides_em_colisao">Asteroides em Colisão</string>
    <string name="saiba_mais">Saiba mais…</string>
    <string name="diametro_minimo">Diametro mínimo:</string>
    <string name="diametro_maximo">Diametro máximo:</string>
    <string name="velocidade">Velocidade:</string>
    <string name="temp_maxima">MÁXIMA</string>
    <string name="temp_minima">MÍNIMA</string>
    <string name="temp_media">MÉDIA</string>
    <string name="temperatura">TEMPERATURA</string>
    <string name="ventos_mph">VENTOS(mph)</string>
    <string name="pressao">PRESSÃO(Pa)</string>
    <string name="app">Cyberspace Info</string>
    <string name="not_found">Conteúdo não encontrado :(</string>
    <string name="icone">icone</string>
    <string name="menupesquisa">MenuPesquisa</string>
    <string name="imagens">Imagens</string>
    <string name="pesquise_astros_estrelas_etc">Pesquise astros, estrelas, etc…</string>
    <string name="botao_pesquisar">botao_pesquisar</string>
    <string name="imagem_menu_pesquisa">imagem_menu_pesquisa</string>
    <string name="imagem_procurar_imagem">imagem_procurar_imagem</string>
    <string name="set_voltar_planeta">set_voltar_planeta</string>
    <string name="icon_astronomy">icon_astronomy</string>
    <string name="ultra_high_energy_particle_astrophysics_with_anita_v">Ultra-high Energy Particle Astrophysics with ANITA-V</string>
    <string name="testing_contributed_to_apollo_11_nasa_marks_the_45th_anniversary_of_the_first_moon_landing_this_month_testing_contributed_to_apollo_11_nasa_marks_the_45th_anniversary_of_the_first_moon_landing_this_month">Testing Contributed to Apollo 11.NASA marks the 45th anniversary of the first moon landing this month. Testing Contributed to Apollo 11.NASA marks the 45th anniversary of the first moon landing this month.</string>
    <string name="_465633_2009_jr5">465633 (2009 JR5)</string>
    <string name="_517_6544m">517.6544m</string>
    <string name="_231_5021m">231.5021m</string>
    <string name="_65260_6370_km_h">65260.6370 km/h</string>

    <string name="icone_asteroides">icone_asteroides</string>
    <string name="imagem_view_show">imagem_view_show</string>
    <string name="icone_favoritos">icone_favoritos</string>
    <string name="icone_download">icone_download</string>
    <string name="botao_login_google">botao_login_google</string>
    <string name="botao_login_facebook">botao_login_facebook</string>
    <string name="imagem_return_mars">imagem_return_mars</string>
    <string name="icone_voltar">icone_voltar</string>
    <string name="imagem_fundo_mars">imagem_fundo_mars</string>
    <string name="rover">Rover</string>
    <string name="data_na_terra">Data na Terra</string>
    <string name="imagem_pesquisar_mars">imagem_pesquisar_mars</string>
    <string name="imagem_test">imagem_test</string>
    <string name="imagem_apod">imagem_apod</string>
    <string name="icone_observatorio">icone_observatorio</string>
    <string name="icone_alien">icone_alien</string>
    <string name="icone_astronauta">icone_astronauta</string>
    <string name="icone_mars_rover">icone_mars_rover</string>
    <string name="icone_termometro">icone_termometro</string>
    <string name="icone_storm">icone_storm</string>
    <string name="icone_asteroide">icone_asteroide</string>
    <string name="icone_astronomia">icone_astronomia</string>
    <string name="icone_sair">icone_sair</string>
    <string name="babe_yoda">Babe Yoda</string>
    <string name="icone_editar">icone_editar</string>
    <string name="icone_open">icone_open</string>
    <string name="icone_sign_google">icone_sign_google</string>
    <string name="icone_sign_facebook">icone_sign_facebook</string>
    <string name="icone_mars">icone_mars</string>
    <string name="icone_thermometer">icone_thermometer</string>
    <string name="sol_123">SOL 123</string>
    <string name="_20_de_agosto_2020">20 DE AGOSTO, 2020.</string>
    <string name="icone_google_maps">icone_google_maps</string>
    <string name="textview">TextView</string>
    <string name="icone_satelite">icone_satelite</string>
    <string name="icone_apod">icone_apod</string>
    <string name="imagem_planeta_orbitando_estrela">imagem_planeta_orbitando_estrela</string>
    <string name="nome_planeta">Nome Planeta</string>
    <string name="ultra_high_energy_particle_astrophysics_with_anita_v_washington_university_co_i">Ultra-high Energy Particle Astrophysics with ANITA-V - Washington University - Co-I</string>
    <string name="_2_1980_9_2006">2/1980 – 9/2006</string>
    <string name="completed">Completed</string>
    <string name="numero_da_tecnologia">Numero da Tecnologia</string>
    <string name="palavra_chave">Palavra Chave</string>
    <string name="diretoria_da_miss_o">Diretoria da Missão</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="icone_filtro_tecnologias_usadas">icone_filtro_tecnologias_usadas</string>
    <string name="resultados_encontrados">Resultados encontrados</string>
</resources>