<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pesquisarimgvid.view.PesquisaActivity"
    android:orientation="vertical"
    android:background="@drawable/fundo_test">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:background="@color/colorPrimaryDarkest">

        <ImageView
            android:id="@+id/imgViewMenuPesquisa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/menupesquisa" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imagens"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:padding="10dp"/>


    </Toolbar>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:padding="@dimen/dimen_20">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_observatory"
            android:contentDescription="@string/icone_observatorio" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtPesquisaImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pesquise_astros_estrelas_etc"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/imgBtnPesquisar"
                android:layout_width="@dimen/dimen_30"
                android:layout_height="@dimen/dimen_30"
                android:src="@drawable/ic_baseline_search_24"
                android:contentDescription="@string/botao_pesquisar" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>