<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".listatecnologiasusadas.view.FiltroTecnologiasUsadasFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBarLayout"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgBackTecnologiasUsadas"
                    android:layout_width="@dimen/dimen_35"
                    android:layout_height="@dimen/dimen_35"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/icone_voltar" />

                <TextView
                    android:id="@+id/txtTittleTec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20"
                    android:gravity="center"
                    android:text="@string/tecnologias_usadas"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_text_24"
                    app:layout_constraintStart_toEndOf="@id/imgBackTecnologiasUsadas"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:id="@+id/imgSatelite"
                    android:layout_width="@dimen/dimen_60"
                    android:layout_height="@dimen/dimen_40"
                    android:layout_marginStart="@dimen/dimen_24"
                    android:src="@drawable/ic_satellite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/txtTittleTec"
                    android:contentDescription="@string/icone_satelite" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputSearchQuery"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/dimen_40"
        android:layout_marginEnd="@dimen/dimen_40"
        app:layout_constraintTop_toBottomOf="@id/AppBarLayout"
        android:layout_marginTop="@dimen/dimen_28"
        android:layout_height="wrap_content"
        android:hint="@string/palavra_chave"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorBase"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtSearchQuery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputObjectId"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/dimen_40"
        android:layout_marginEnd="@dimen/dimen_40"
        app:layout_constraintTop_toBottomOf="@id/txtInputSearchQuery"
        android:layout_marginTop="@dimen/dimen_28"
        android:layout_height="wrap_content"
        android:hint="@string/numero_da_tecnologia"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorBase"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtObjectId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputDirectoryMission"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/dimen_40"
        android:layout_marginEnd="@dimen/dimen_40"
        app:layout_constraintTop_toBottomOf="@id/txtInputObjectId"
        android:layout_marginTop="@dimen/dimen_28"
        android:layout_height="wrap_content"
        android:hint="@string/diretoria_da_miss_o"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorBase"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtDirectoryMission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnFiltroTecnologiasUsadas"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/dimen_40"
        android:layout_marginRight="@dimen/dimen_40"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInputDirectoryMission"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/pesquisar"
        app:cornerRadius ="0dp"
        android:layout_marginTop="@dimen/dimen_40"
        android:layout_gravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>