<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".listatempomarte.view.TempoEmMarteFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@id/tolbarMarsRover"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tolbarMarsRover"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/imgReturn_fTempoEmMarte"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:contentDescription="@string/icone_voltar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/tempo_em_marte"
                android:textColor="@color/colorWhite"
                android:textSize="21sp" />

            <ImageView
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_mars"
                android:contentDescription="@string/icone_mars" />

            <ImageView
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_thermometer"
                android:contentDescription="@string/icone_thermometer" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/tempo_em_marte"
                android:contentDescription="@string/tempo_em_marte" />
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBase"
                android:alpha="0.28"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:orientation="vertical">
            <TextView
                android:id="@+id/txtSol_fTempoEmMarte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sol_123"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dimen_text_60"
                android:gravity="center"
                android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                <TextView
                    android:id="@+id/txtData_fTempoEmMarte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/_20_de_agosto_2020"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_text_30"
                    android:gravity="center"
                    android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8"
                android:layout_marginEnd="@dimen/dimen_8"
                android:layout_marginTop="@dimen/dimen_8"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_text_17"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:gravity="end"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_maxima"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_text_17"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:gravity="end"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_minima"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_text_17"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:gravity="end"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_media"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_text_17"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:gravity="end"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperatura"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_14"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txtTempMax_fTempoEmMarte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_text_17"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtTempMin_fTempoEmMarte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_text_17"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtTempMed_fTempoEmMarte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_text_17"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8"
                android:layout_marginEnd="@dimen/dimen_8"
                android:layout_marginTop="@dimen/dimen_8"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_14"
                    android:textStyle="bold"
                    android:text="@string/ventos_mph"
                    android:textColor="@color/colorWhite"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txtVentosMax_fTempoEmMarte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_text_17"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtVentosMin_fTempoEmMarte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_text_17"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtVentosMed_fTempoEmMarte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_text_17"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8"
                android:layout_marginEnd="@dimen/dimen_8"
                android:layout_marginTop="@dimen/dimen_8"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_14"
                    android:textColor="@color/colorWhite"
                    android:text="@string/pressao"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txtPressaoMax_fTempoEmMarte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_text_17"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPressaoMin_fTempoEmMarte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_text_17"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPressaoMed_fTempoEmMarte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_text_17"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>